MOBI-450 BB List Styling: not enough contrast in header - remove app styles that were compensating for theme bug - change bb icon color to black
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@31789 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
+++ b/samples/mobileshowcase/src/main/webapp/resources/css/showcase.css
@@ -96,11 +96,6 @@
 @media screen and (max-width: 600px) {  
     input[type='file']{ width: 200px; }
  }
-html.bberry .mobi-list-item-group {
-    background-color: #EFEFEF;
-    text-shadow: none;
-    border-top: 1px solid #BBB;
-}
 .exampleTabs > .mobi-tabset-tabs{ 
     z-index: 0; /* place example tabs underneath the app tabs */
     /*border-top:1px solid #A5A9B6;*/
@@ -128,13 +123,13 @@ html.bberry .mobi-list-item-group {
     left: 0.5em;
     top: 5px;
 }
+html.bberry .ui-icon,
 html.iphone .ui-icon,
 html.ipad .ui-icon,
 html.honeycomb .ui-icon {
    background-image: url(images/icons-white.png.jsf);
 }
-html.android .ui-icon,
-html.bberry .ui-icon {
+html.android .ui-icon{
    background-image: url(images/icons-black.png.jsf);
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
